Scrollbar no longer appears on windows

--- a/public/index.css
+++ b/public/index.css
@@ -13,6 +13,7 @@ button{
 body{
   background-color: #000000;
   color: rgb(0, 255, 51);
+  overflow-y: hidden;
 }
 
 a{
